# test_ds_credit

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MOTIVATION.md  Makefile  README.md  RESULTS.md  SECURITY.md  pyproject.toml
.github/: README.md  ci.yml.example
scripts/: generate_plots.py
src/credit_check/: __init__.py  api.py  check_subject.py  classify.py  cli.py  extract.py  metrics.py
src/credit_check/llm/: __init__.py  subject_checker.py
src/credit_check/parsers/: __init__.py  account.py  address.py  amount.py  bik.py  contractor.py  currency.py  date.py  doc_number.py  email.py  inn.py  kpp.py  ogrn.py  phone.py  subject.py  vat.py
tests/: __init__.py  conftest.py  test_all_pass.py  test_api.py  test_check_subject.py  test_classify.py  test_dataset.py  test_extract.py  test_mandatory.py  test_parsers_extra.py
