[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-ds-credit"
version = "0.7.0"
description = "AI-агент проверки целевого использования льготных кредитов — тестовое задание DS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DS intern candidate" }]
keywords = ["ocr", "nlp", "extract", "classify", "agriculture", "credit"]

dependencies = [
    "rapidfuzz>=3.6,<4.0",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.2,<0.4",
    "langchain-openai>=0.1,<0.3",
]
api = [
    "fastapi>=0.110,<0.120",
    "uvicorn[standard]>=0.27,<0.32",
]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.0,<6.0",
    "httpx>=0.27,<0.30",
    "matplotlib>=3.8,<4.0",
]

[project.scripts]
credit-check = "credit_check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]


[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "B", "UP", "SIM"]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]  # assert False OK в тестах

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/credit_check"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
